--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body{
   background-image: url("../images/pigeon-background.JPEG");
   background-size: cover ;
   background-position: center;
-
+  background-repeat: no-repeat;
   /*Req 1*/
 }
 
@@ -53,7 +53,7 @@ p{
 a {
   font-size: 16px;
   color: #c12258;
-  text-decoration-style: wavy;
+  text-decoration-style: underline wavy;
 
   /*Req 4*/
 }
@@ -77,16 +77,15 @@ td{
 /*Req 6b*/
 .colhead{
   min-width: 125px;
-  text-align: center;
   text-transform: uppercase;
-  vertical-align: center;
+  vertical-align: middle;
   background-color: #7e0820;
   padding: 10px;
   color: #FFFFFF;
 }
 /*Req 6c*/
 .rowhead{
-border-left: 2px solid black;
+border-top: 2px solid black;
 border-right: 2px solid black;
 }
 /*Req 6d*/
@@ -98,12 +97,11 @@ tr:nth-child(even) {
   background-color: #D1D1D1;
 }
 /*Req 6f*/
-table tr:hover {
+tr:hover {
   background-color: rgb(126, 8, 32,.5);
 }
 /*Req 7*/
 table {
-  text-align: center;
   margin: 0 auto;
   border: 2px solid #000000;
   border-radius: 10px;
@@ -114,15 +112,15 @@ thead tr:first-child th:first-child{
   border-top-left-radius: 10px;
 }
 
-thead tr:first-child th:first-child{
+thead tr:last-child th:last-child{
   border-top-right-radius: 10px;
 }
 
-thead tr:first-child th:first-child{
+tbody tr:last-child th:first-child{
   border-bottom-left-radius: 10px;
 }
 
-thead tr:first-child th:first-child{
+tbody tr:last-child td:last-child{
   border-bottom-right-radius: 10px;
 }
 /*Add selectors and rules here*/
