--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body{
   font-size: 16px;
   margin: 1.2em;
   background-image: url("../images/pigeon-background.JPEG");
+  background-color: #DDDDDD;
   background-size: cover ;
   background-position: center;
   background-repeat: no-repeat;
@@ -52,8 +53,8 @@ p{
 
 a {
   font-size: 16px;
-  color: #c12258;
-  text-decoration-style: underline wavy;
+  color:#B21F50;
+  text-decoration-style: wavy;
 
   /*Req 4*/
 }
@@ -98,7 +99,7 @@ tr:nth-child(even) {
 }
 /*Req 6f*/
 tr:hover {
-  background-color: rgb(126, 8, 32,.5);
+  background-color: rgba(126, 8, 32, 0.25);
 }
 /*Req 7*/
 table {
